--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
-        "time.h": "c"
+        "time.h": "c",
+        "math.h": "c"
     }
 }
